20010915
 - (djm) Make do_pre_login static to avoid prototype #ifdef hell

20010914
 - (bal) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2001/09/13
     [rijndael.c rijndael.h]
     missing $OpenBSD
   - markus@cvs.openbsd.org 2001/09/14
     [session.c]
     command=xxx overwrites subsystems, too
   - markus@cvs.openbsd.org 2001/09/14
     [sshd.c]
     typo

20010913
 - (bal) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2001/08/23 11:31:59
     [cipher.c cipher.h]
     switch to the optimised AES reference code from
     http://www.esat.kuleuven.ac.be/~rijmen/rijndael/rijndael-fst-3.0.zip

20010912
 - (bal) OpenBSD CVS Sync
   - jakob@cvs.openbsd.org 2001/08/16 19:18:34
     [servconf.c servconf.h session.c sshd.8]
     deprecate CheckMail. ok markus@
   - stevesk@cvs.openbsd.org 2001/08/16 20:14:57
     [ssh.1 sshd.8]
     document case sensitivity for ssh, sshd and key file
     options and arguments; ok markus@
   - stevesk@cvs.openbsd.org 2001/08/17 18:59:47
     [servconf.h]
     typo in comment
   - stevesk@cvs.openbsd.org 2001/08/21 21:47:42
     [ssh.1 sshd.8]
     minor typos and cleanup
   - stevesk@cvs.openbsd.org 2001/08/22 16:21:21
     [ssh.1]
     hostname not optional; ok markus@
   - stevesk@cvs.openbsd.org 2001/08/22 16:30:02
     [sshd.8]
     no rexd; ok markus@
   - stevesk@cvs.openbsd.org 2001/08/22 17:45:16
     [ssh.1]
     document cipher des for protocol 1; ok deraadt@
   - camield@cvs.openbsd.org 2001/08/23 17:59:31
     [sshd.c]
     end request with 0, not NULL
     ok markus@
   - stevesk@cvs.openbsd.org 2001/08/23 18:02:48
     [ssh-agent.1]
     fix usage; ok markus@
   - stevesk@cvs.openbsd.org 2001/08/23 18:08:59
     [ssh-add.1 ssh-keyscan.1]
     minor cleanup
   - danh@cvs.openbsd.org 2001/08/27 22:02:13
     [ssh-keyscan.c]
     fix memory fault if non-existent filename is given to the -f option
     ok markus@
   - markus@cvs.openbsd.org 2001/08/28 09:51:26
     [readconf.c]
     don't set DynamicForward unless Host matches