@@ -1,5 +1,6 @@
 20010915
  - (djm) Make do_pre_login static to avoid prototype #ifdef hell
+ - (djm) Sync scard/ stuff
 
 20010914
  - (bal) OpenBSD CVS Sync
@@ -6431,4 +6432,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1515 2001/09/15 02:25:53 djm Exp $
+$Id: ChangeLog,v 1.1516 2001/09/15 10:58:46 djm Exp $
